[tool.poetry]
name = "hypermodern-python-tutorial"
version = "0.1.0"
authors = ["Evgeny Kirillov <kirilllov.evgeny@mail.ru>"]
packages = [{include = "hypermodern_python_tutorial", from = "src"}]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/prometeyqwe/hypermodern-python-tutorial"
repository = "https://github.com/prometeyqwe/hypermodern-python-tutorial"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hypermodern-python-tutorial = "hypermodern_python_tutorial.console:main"

